[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tictactoe-dqn"
version = "1.0.0"
description = "A Reinforcement Learning agent that plays Tic-Tac-Toe with 3D Neural Network visualization."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "QuantumNovice", email = "portabl3lapy@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "torch>=2.9.1",
    "gym>=0.21.0",
    "numpy>=2.3.5",
    "pygame>=2.1.0",
    "colorama>=0.4.4",
]

[project.urls]
Homepage = "https://github.com/QuantumNovice/tictactoe-dqn"
Repository = "https://github.com/QuantumNovice/tictactoe-dqn"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
